--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -14,6 +14,12 @@
     pointer-events: none;
 }
 
+form textarea{
+    resize: none;
+    width: 100% !important;
+    height: 200px !important;
+}
+
 .modal-button {
     margin-top: 16px;
 }
