--- a/src/main/resources/static/css/userEdit.css
+++ b/src/main/resources/static/css/userEdit.css
@@ -26,15 +26,8 @@
     display: flex;
 }
 
-.profile-info-container {
+.user {
     width: 40%;
-    display: flex;
-    flex-direction: column;
-}
-
-.profile-info {
-    display: flex;
-    flex-direction: row;
 }
 
 .img-container {
@@ -46,18 +39,6 @@
 .profile-edit {
     width: 60%;
     display: flex;
-}
-
-.info-container {
-    padding: 10px 0 0 10px;
-}
-
-.bio {
-    padding-top: 10px;
-}
-
-.bio-item {
-    margin-top: 10px;
 }
 
 .newpicture {
@@ -88,13 +69,10 @@
     color: #000000;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1150px) {
     .container {
         flex-direction: column;
-    }
-
-    .profile-info-container {
-        width: 100%;
+        width: 85%;
     }
 
     .profile-edit {
@@ -143,5 +121,9 @@
 
     .form-group {
         flex-direction: column;
+    }
+
+    .user {
+        width: 100%;
     }
 }
