--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -14,38 +14,7 @@
 </div>
 
 <div class="container">
-    <div class="profile-info-container">
-        <div class="profile-info">
-            <div class="img-container">
-                <img class="avatar" th:if="!${user.getImage()}" src="/img/profilePic.svg" alt="Foto do usuário">
-                <img class="avatar" th:if="${user.getImage()}" th:src="${user.getImage()}" alt="Foto do usuário">
-            </div>
-            <div class="info-container">
-                <h2 th:text="${user.getName()}"></h2>
-                <br>
-                <small> <b>Membro desde:&nbsp </b> <span
-                        th:text="${#dates.format(user.getCreatedAt(), 'dd/MM/yyyy')}"></span></small>
-
-                <div class="items-info">
-                    <p class="pontuacao">Pontuação: 20 pontos</p>
-                </div>
-            </div>
-        </div>
-        <div class="bio">
-            <div th:if="${user.getCompany()}" id="company" class="bio-item">
-                <h3>Empresa</h3>
-                <p th:text="${user.getCompany()}"></p>
-            </div>
-            <div th:if="${user.getWebsite()}" class="bio-item">
-                <h2>Site</h2>
-                <p><a th:href="@{{id}(id=${user.getWebsite()})}" target="_blank" th:text="${user.getWebsite()}"></a></p>
-            </div>
-            <div th:if="${user.getBio()}" id="biography" class="bio-item">
-                <h2>Biografia</h2>
-                <p th:text="${user.getBio()}"></p>
-            </div>
-        </div>
-    </div>
+    <div th:insert="fragments/userFragment.html :: user" class="user"></div>
     <div class="line"></div>
     <div class="question-card-divider"></div>
     <form role="form" th:action="@{/user/edit}" th:method="post" th:object="${user}" enctype="multipart/form-data" class="profile-edit">
