--- a/src/main/resources/templates/adminMods.html
+++ b/src/main/resources/templates/adminMods.html
@@ -13,8 +13,8 @@
     <div class="col-6">
         <div class="line"></div>
         <div class="tabs">
-            <a href="/admin/banner">Editar Propaganda</a>
-            <a href="/admin/mods">Gerenciar Moderadores</a>
+            <a class="prop" href="/admin/banner">Editar Propaganda</a>
+            <a class="mods" th:classappend="${active} ? 'active' : ''" href="/admin/mods">Gerenciar Moderadores <span></span> </a>
         </div>
         <form role="form" th:action="@{/admin/mods/getUser}" th:method="post">
             <div class="form">
