--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -48,13 +48,22 @@
     padding: 0 20px;
     color: #000;
     font-weight: bold;
-
-
 }
+
 .tabs a:active{
     color:var(--dark-green);
 }
 
-.current-link {
-    color:#baada7;
+.active{
+    color:var(--dark-green) !important;
 }
+
+.active span{
+    display: block;
+    border-bottom: 2px solid var(--dark-green);
+    width: 110%;
+    padding-bottom: 4px;
+    margin-left: -7px;
+}
+
+
