fix: altera a cor do link do site

--- a/src/main/resources/static/css/userFragment.css
+++ b/src/main/resources/static/css/userFragment.css
@@ -22,6 +22,10 @@
     margin-top: 10px;
 }
 
+.websiteLink {
+    color: black;
+}
+
 @media (max-width: 1150px) {
     .profile-info-container {
         width: 100%;
