--- a/src/main/resources/templates/fragments/userFragment.html
+++ b/src/main/resources/templates/fragments/userFragment.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-</head>
+
 <body>
 <div th:fragment="user">
+    <link rel="stylesheet" th:href="@{/css/userFragment.css}">
     <div class="profile-info-container">
         <div class="profile-info">
             <div class="img-container">
