--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -14,6 +14,12 @@
     pointer-events: none;
 }
 
+.comment{
+    -webkit-transition: none;
+    -moz-transition: none;
+    transition: none;
+}
+
 form textarea{
     resize: none;
     width: 100% !important;
