--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header th:replace="fragments/header.html :: header"></header>
-<div class="modal clickable">
+<div class="modal comment clickable">
     <div class="modal-background">
         <p class="close" th:onclick="closeModal()">X</p>
         <form id="comment-form" role="form" th:action="''" th:method="post">
@@ -62,7 +62,7 @@
         <div class="status-pill-questions self-end bg-danger">
             <small>Não solucionada</small>
         </div>
-            <div class="add-comment self-end" th:onclick="|updateModal('question;${question.id}')|">
+            <div sec:authorize="isAuthenticated()" class="add-comment self-end" th:onclick="|updateModal('question;${question.id}')|">
                 <img alt="Adicionar Comentário" th:src="@{/img/icons/add_comment.svg}"/>
                 <small>Adicionar um Comentário</small>
             </div>
@@ -122,7 +122,7 @@
                     <a th:href="@{/answer/delete/{id}(id=${answer.getId()})}"><img alt="deletar" th:src="@{/img/icons/lixeira.svg}"/></a>
                 </div>
             </div>
-            <div class="add-comment self-end" th:onclick="|updateModal('answer;${answer.getId()}')|">
+            <div sec:authorize="isAuthenticated()" class="add-comment self-end" th:onclick="|updateModal('answer;${answer.getId()}')|">
                 <img alt="Adicionar Comentário" th:src="@{/img/icons/add_comment.svg}"/>
                 <small>Adicionar um Comentário</small>
             </div>
