--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,7 +1,7 @@
 .container{
     display: flex;
     width: 100%;
-    height: calc(100vh - 56px);
+    height: calc(100vh - 64px);
 }
 
 .form{
@@ -66,4 +66,21 @@
     margin-left: -7px;
 }
 
+.user {
+    border: 1px dashed #DDDDDD;
+    padding: 20px;
+}
 
+.user-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10vh;
+}
+
+.banner {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10%;
+    align-items: center;
+}
