--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -36,9 +36,10 @@
         <div class="question-card-actions">
             <div class="question-page-main-card">
                 <div class="main-card-left">
-                    <img alt="Imagem do perfil do usuário" src="/img/user.svg"/>
+                    <img alt="Imagem do perfil do usuário" th:if="${question.getUser().getImage()}" th:src="${question.getUser().getImage()}"/>
+                    <img alt="Imagem do perfil do usuário" th:if="!${question.getUser().getImage()}" src="/img/user.svg"/>
                     <div class="name-last-access">
-                        <p th:text="${question.getUser().getName()}"></p>
+                        <a th:href="@{/user/{id}(id=${question.getUser().getId()})}" th:text="${question.getUser().getName()}"></a>
                         <small th:text="${question.getCreatedAtString()}"></small>
                     </div>
                 </div>
