--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -68,13 +68,13 @@
 
 .question-card-actions{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
 }
 
 .answer-card-actions{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
 }
 
@@ -85,10 +85,11 @@
 
 .action-icons{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: min-content;
     margin-left: 0.5rem;
     align-items: center;
+    align-self: flex-end;
 }
 
 
@@ -151,14 +152,17 @@
     display: flex;
     flex-direction: column;
     width: max-content;
-    align-items: center;
+    align-items: flex-start;
     padding: 4px;
 }
 
 .main-card-left img {
-    border-radius: 16px;
+    border-radius: 500%;
     width: 6rem;
     min-width: 32px;
+    max-width: 64px;
+    min-height: 32px;
+    max-height: 80px;
     margin-bottom: 4px;
 }
 
@@ -192,6 +196,7 @@
     display: inline-flex;
     justify-content: space-between;
     margin-bottom: 0.3rem;
+    font-size: 1.7rem;
 }
 
 .question-title a{
@@ -231,7 +236,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 4px;
 }
 
 .name-last-access p{
@@ -333,6 +337,7 @@ hr{
     align-items: center;
     font-size: 14px;
     margin-top: 4px;
+    margin-bottom: 8px;
     cursor: pointer;
 }
 
@@ -362,20 +367,24 @@ hr{
 
     #mobile-status{
         display: flex;
-        margin-left: 32vw;
+        margin-left: 1rem;
+        align-self: auto;
     }
 
     .main-content{
-        width: 100vw;
+        width: 90vw;
         margin: 4rem 1rem 0 1rem
     }
 
     .main-card-left{
         flex-direction: row;
+        align-items: center;
     }
 
     .main-card-left img{
-        max-width: 32px;
+        max-width: 48px;
+        margin-right: 8px;
+        border-radius: 500%;
     }
 
     .answer-card{
@@ -411,6 +420,10 @@ hr{
 
     .comment-card{
         width: 80%;
+    }
+
+    .answer-page-main-card{
+        flex-direction: column;
     }
 
 
