feature @luis.santana Criação do toast de reputation conforme o figma, adicionado toast quando o usuário completa o perfil e faz uma pergunta

--- a/src/main/resources/static/css/toast.css
+++ b/src/main/resources/static/css/toast.css
@@ -43,6 +43,10 @@
     background-color: #51A351;
 }
 
+.toast-reputation{
+    background-color: #C9C100;
+}
+
 .toast-show{
     visibility: visible;
     -webkit-animation: fadein 1.5s,stay 3s 1s, fadeout 0.5s 2.5s;
