--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
                 <div class="card-right-text">
                     <p>0</p>
                     <p>respostas</p>
-                    <small>0 comentários</small>
+                    <small th:text="${question.getCommentCountString()}"></small>
                 </div>
             </div>
         </div>
