--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -158,11 +158,10 @@
 
 .main-card-left img {
     border-radius: 500%;
-    width: 6rem;
+    width: 80px;
+    height: 80px;
     min-width: 32px;
-    max-width: 64px;
     min-height: 32px;
-    max-height: 80px;
     margin-bottom: 4px;
 }
 
@@ -196,7 +195,7 @@
     display: inline-flex;
     justify-content: space-between;
     margin-bottom: 0.3rem;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
 }
 
 .question-title a{
@@ -289,10 +288,12 @@
 }
 
 .answer-card-left img {
-    border-radius: 50%;
-    width: 80%;
+    border-radius: 500%;
     min-width: 32px;
-    margin: 0 8px 0 0;
+    min-height: 32px;
+    width: 80px;
+    height: 80px;
+    margin-right: 1rem;
 }
 
 .answer-card-right{
@@ -353,6 +354,11 @@ hr{
     display: none;
 }
 
+.image-name-last-access{
+    display: flex;
+    flex-direction: column;
+}
+
 @media (min-width: 481px) and (max-width: 1025px) {
     .main-content{
         width: 80vw;
@@ -360,6 +366,10 @@ hr{
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
+
+    .image-name-last-access{
+        flex-direction: row;
+    }
 
     #desktop-status{
         display: none;
@@ -378,11 +388,14 @@ hr{
 
     .main-card-left{
         flex-direction: row;
-        align-items: center;
+        align-items: flex-start;
+        width: 100%;
+        justify-content: space-between;
     }
 
     .main-card-left img{
         max-width: 48px;
+        max-height: 48px;
         margin-right: 8px;
         border-radius: 500%;
     }
@@ -394,10 +407,13 @@ hr{
 
     .answer-card-left{
         flex-direction: row;
+        padding: 0;
+        margin-bottom: 1rem;
     }
 
     .answer-card-left img{
-        max-width: 32px;
+        max-width: 48px;
+        max-height: 48px;
     }
 
     .question-page-main-card{
