Feature: @eduardo.lessa, @vinicius Banner sendo salvo em cache da aplicação e chamada do mesmo nas telas de Index e Perfil de usuário.

--- a/src/main/resources/templates/adminBanner.html
+++ b/src/main/resources/templates/adminBanner.html
@@ -24,8 +24,8 @@
                     <input type="text" name="title" id="title"/>
                 </div>
                 <div class="form-control">
-                    <label for="link">Link do anúncio</label>
-                    <input type="text" name="link" id="link"/>
+                    <label for="url">Link do anúncio</label>
+                    <input type="text" name="url" id="url"/>
                 </div>
                 <div class="form-control">
                     <label for="description">Texto do anuncio</label>
