--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -70,7 +70,7 @@
         <div class="status-pill-questions self-end bg-danger" id="desktop-status">
             <small>Não solucionada</small>
         </div>
-            <div sec:authorize="isAuthenticated()" class="add-comment self-end" th:onclick="|updateModal('question;${question.id}')|">
+            <div sec:authorize="isAuthenticated()" class="add-comment self-end" th:onclick="|updateModal('questionComment;${question.id}')|">
                 <img alt="Adicionar Comentário" th:src="@{/img/icons/add_comment.svg}"/>
                 <small>Adicionar um Comentário</small>
             </div>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="action-icons-comment" sec:authorize="isAuthenticated()" th:if="${#authentication.getPrincipal().id == comment.getUser().getId()}">
-                    <img th:onclick="|updateModal('edit;${comment.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar comentário"/>
+                    <img th:onclick="|updateModal('editComment;${comment.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar comentário"/>
                     <a th:href="'/comment/delete/' + ${question.getId()} + '/' + ${comment.getId()}"><img th:src="@{/img/icons/lixeira.svg}" alt="Excluir comentário"/></a>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
             </div>
-            <div sec:authorize="isAuthenticated()" class="add-comment self-end" th:onclick="|updateModal('answer;${answer.getId()}')|">
+            <div sec:authorize="isAuthenticated()" class="add-comment self-end" th:onclick="|updateModal('answerComment;${answer.getId()}')|">
                 <img alt="Adicionar Comentário" th:src="@{/img/icons/add_comment.svg}"/>
                 <small>Adicionar um Comentário</small>
             </div>
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="action-icons-comment" sec:authorize="isAuthenticated()" th:if="${#authentication.getPrincipal().id == comment.getUser().getId()}">
-                        <img th:onclick="|updateModal('edit;${comment.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar comentário"/>
+                        <img th:onclick="|updateModal('editComment;${comment.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar comentário"/>
                         <a th:href="'/comment/delete/' + ${question.getId()} + '/' + ${comment.getId()}"><img th:src="@{/img/icons/lixeira.svg}" alt="Excluir comentário"/></a>
                     </div>
                 </div>
@@ -156,6 +156,6 @@
 </div>
 <div th:replace="fragments/toast.html :: toasts">
 </div>
-<script defer th:src="@{/js/comments.js}"></script>
+<script defer th:src="@{/js/modal.js}"></script>
 </body>
 </html>
