Fix: @bruno.guerra
Melhorias para o modal.

--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -14,7 +14,7 @@
     pointer-events: none;
 }
 
-.comment{
+.no-transitions{
     -webkit-transition: none;
     -moz-transition: none;
     transition: none;
