--- a/src/main/resources/static/css/banner.css
+++ b/src/main/resources/static/css/banner.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 
-.banner {
+.banner-main {
     display: flex;
     flex-direction: column;
 }
@@ -23,10 +23,13 @@
     border-radius: 20px;
     text-decoration: none;
     text-align: center;
+    align-self: center;
 }
 
 .banner-description {
     color: #FFF;
+    font-size: 12px;
+    padding: 12px 0;
 }
 
 .banner-right {
