--- a/src/main/resources/static/css/userEdit.css
+++ b/src/main/resources/static/css/userEdit.css
@@ -8,6 +8,11 @@
     /*margin-top: 10px;*/
 }
 
+.forms {
+    display: flex;
+    flex-direction: column;
+}
+
 .form-control {
     width: 100%;
 }
@@ -48,7 +53,7 @@
 }
 
 .form {
-    width: 80%;
+    width: 100%;
     height: 75%;
 }
 
