--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -17,57 +17,114 @@
     <div th:insert="fragments/userFragment.html :: user" class="user"></div>
     <div class="line"></div>
     <div class="question-card-divider"></div>
-    <form role="form" th:action="@{/user/edit}" th:method="post" th:object="${user}" enctype="multipart/form-data" class="profile-edit">
-        <input type="hidden" name="id" th:value="${user.getId()}" />
-        <div class="newpicture">
-            <p class="title pic-title">Editar Perfil</p>
-            <div class="avatar img-container link">
-                <div onclick="document.querySelector('#fileinput').click()">
-                    <img th:if="!${user.getImage()}"
-                         src="/img/newpicture.png"
-                         class="avatar newpic"
-                         alt="Adicionar nova foto">
-                    <img class="avatar newpic" th:if="${user.getImage()}" th:src="${user.getImage()}"
-                         alt="Adicionar nova foto">
+
+<!--    <div class="container-forms">-->
+        <form role="form" th:action="@{/user/edit}" th:method="post" th:object="${user}" enctype="multipart/form-data" class="profile-edit">
+            <input type="hidden" name="id" th:value="${user.getId()}" />
+            <div class="newpicture">
+                <p class="title pic-title">Editar Perfil</p>
+                <div class="avatar img-container link">
+                    <div onclick="document.querySelector('#fileinput').click()">
+                        <img th:if="!${user.getImage()}"
+                             src="/img/newpicture.png"
+                             class="avatar newpic"
+                             alt="Adicionar nova foto">
+                        <img class="avatar newpic" th:if="${user.getImage()}" th:src="${user.getImage()}"
+                             alt="Adicionar nova foto">
+                    </div>
+                    <input id="fileinput" name="fileimage" onchange="showImg()" accept="image/*" type="file" style="display: none">
                 </div>
-                <input id="fileinput" name="fileimage" onchange="showImg()" accept="image/*" type="file" style="display: none">
             </div>
-        </div>
-        <div class="form">
-                <p class="title edit-title">Editar Perfil</p>
 
-                <div class="form-group">
-                    <div class="form-control">
-                        <label for="name">Nome</label>
-                        <input type="text" name="name" id="name" th:value="${user.getName()}"/>
+            <div class="forms">
+                <div class="form">
+                    <p class="title edit-title">Editar Perfil</p>
+
+                    <div class="form-group">
+                        <div class="form-control">
+                            <label for="name">Nome</label>
+                            <input type="text" name="name" id="name" th:value="${user.getName()}"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="form-control">
+                            <label for="name">Empresa</label>
+                            <input type="text" name="company" th:value="${user.getCompany()}"/>
+                        </div>
+
+                        <div class="form-control">
+                            <label for="name">Site</label>
+                            <input type="text" name="website" id="website" th:value="${user.getWebsite()}"/>
+                            <label id="example" for="website">Ex.: https://www.seusite.com </label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="form-control">
+                            <label for="name">Bio</label>
+                            <textarea type="text" name="bio" id="bio" th:text="${user.getBio()}"></textarea>
+                        </div>
+                    </div>
+                    <div class="row white-background">
+                        <button type="submit">Atualizar</button>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="form-control">
-                        <label for="name">Empresa</label>
-                        <input type="text" name="company" th:value="${user.getCompany()}"/>
+                <div class="form">
+                    <p class="title">Editar Credenciais</p>
+
+                    <div class="form-group">
+
+                        <div class="form-control">
+                            <label for="current">Senha Atual</label>
+                            <input type="password" name="currentPassword" id="current" />
+                        </div>
+
+                        <div class="form-control">
+                            <label for="newPassword">Nova Senha</label>
+                            <input type="password" name="newPassword" id="newPassword" />
+                        </div>
+
+                        <div class="form-control">
+                            <label for="confirmNewPassword">Confirmar Senha</label>
+                            <input type="password" name="confirmNewPassword" id="confirmNewPassword" />
+                        </div>
                     </div>
 
-                    <div class="form-control">
-                        <label for="name">Site</label>
-                        <input type="text" name="website" id="website" th:value="${user.getWebsite()}"/>
-                        <label id="example" for="website">Ex.: https://www.seusite.com </label>
+                    <div class="row white-background">
+                        <button type="submit">Atualizar Senha</button>
                     </div>
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <div class="form-control">
-                        <label for="name">Bio</label>
-                        <textarea type="text" name="bio" id="bio" th:text="${user.getBio()}"></textarea>
-                    </div>
-                </div>
-                <div class="row white-background">
-                    <button type="submit">Atualizar</button>
-                </div>
-        </div>
-    </form>
-</div>
+
+        </form>
+
+<!--        <form th:action="@{/user/editPassword}" th:method="post" th:object="${user}">-->
+<!--            <div class="form">-->
+<!--                <p class="title edit-title">Editar Credenciais</p>-->
+
+<!--                <div class="form-group">-->
+<!--                    <div class="form-control">-->
+<!--                        <label for="newPassword">Senha</label>-->
+<!--                        <input type="password" name="newPassword" id="newPassword" />-->
+<!--                    </div>-->
+
+<!--                    <div class="form-control">-->
+<!--                        <label for="confirmNewPassword">Nova Senha</label>-->
+<!--                        <input type="password" name="confirmNewPassword" id="confirmNewPassword" />-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--                <div class="row white-background">-->
+<!--                    <button type="submit">Atualizar Senha</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </form>-->
+<!--    </div>-->
+
+<!--</div>-->
 
 <div th:replace="fragments/toast.html :: toasts">
 </div>
