feature:07/@squad1 - Editar answer adicionado, fix da imagem da resposta, usuario não pode responder a propria pergunta(FRONT ONLY)

--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -78,6 +78,11 @@
     width: 100%;
 }
 
+.answer-card-actions img{
+    cursor: pointer;
+}
+
+
 .comment-actions{
     display: flex;
     flex-direction: row;
