--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -94,7 +94,7 @@
         <div class="answer-textarea-container">
             <h2>Digite sua resposta</h2>
 
-            <div sec:authorize="${!isAnonymous()}" class="answer-textarea-button">
+            <div sec:authorize="${!isAnonymous()}" th:if="${#authentication.getPrincipal().id!=question.getUser().getId()}" class="answer-textarea-button">
                 <form th:method="post" th:object="${answer}" th:action="@{/answer/create}">
                     <input th:type="hidden" th:id="question" th:name="question" th:value="${question.getId()}"/>
                     <textarea th:disabled="!${#request.userPrincipal}" name="text" id="text"> </textarea>
@@ -107,18 +107,23 @@
                 <h1>Você não está logado.</h1>
                 <h2>Entre com sua conta ou cadastre-se para responder.</h2>
             </div>
+            <div sec:authorize="isAuthenticated()"
+                 th:if="${#authentication.getPrincipal().id==question.getUser().getId()}" class="required-login-banner">
+                <h1>Você não pode responder a sua pergunta.</h1>
+                <h2>Bela tentativa!</h2>
+            </div>
         </div>
         <div th:each="answer:${answers}">
             <div class="answer-card-actions">
                 <div sec:authorize="isAuthenticated()"
                      th:if="${#authentication.getPrincipal().id==answer.getUser().getId()}" class="action-icons">
-                    <a href="#"><img th:src="@{/img/icons/lapis.svg}"/></a>
+                    <img th:onclick="|updateModal('editAnswer;${answer.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar resposta"/>
                     <a th:href="@{/answer/delete/{id}(id=${answer.getId()})}"><img alt="deletar" th:src="@{/img/icons/lixeira.svg}"/></a>
                 </div>
                 <div class="answer-page-main-card">
                     <div class="answer-card-left">
-                        <img alt="Imagem do perfil do usuário" th:if="${question.getUser().getImage()}" th:src="${question.getUser().getImage()}"/>
-                        <img alt="Imagem do perfil do usuário" th:if="!${question.getUser().getImage()}" src="/img/user.svg"/>
+                        <img alt="Imagem do perfil do usuário" th:if="${answer.getUser().getImage()}" th:src="${answer.getUser().getImage()}"/>
+                        <img alt="Imagem do perfil do usuário" th:if="!${answer.getUser().getImage()}" src="/img/user.svg"/>
                         <div class="name-last-access">
                             <p th:text="${answer.getUser().getName()}"></p>
                             <small th:text="${answer.getCreatedAtString()}"></small>
@@ -126,7 +131,7 @@
                     </div>
                     <div class="answer-card-right">
                         <div class="question-text">
-                            <p th:text="${answer.getText()}"></p>
+                            <p th:text="${answer.getText()}" th:id="'answer-' + ${answer.getId()}"></p>
                         </div>
                     </div>
                 </div>
