fix: compos de senha adicionados no usuario e lógica para trocar a senha no backend

--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -77,8 +77,8 @@
                     <div class="form-group">
 
                         <div class="form-control">
-                            <label for="current">Senha Atual</label>
-                            <input type="password" name="currentPassword" id="current" />
+                            <label for="password">Senha Atual</label>
+                            <input type="password" name="password" id="password" />
                         </div>
 
                         <div class="form-control">
