Feat: @squad2 Estilização do banner.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -202,6 +202,10 @@ aside {
     text-align: center;
 }
 
+.banner {
+    margin-top: 10vh;
+}
+
 #mobile-icon {
     display: none;
     width: 12rem;
@@ -212,6 +216,15 @@ aside {
 @media (max-width: 1500px) {
     .index-anon {
         background: var(--light-green);
+    }
+}
+
+@media (max-width: 768px) {
+    aside {
+        display: none;
+    }
+    .question-card {
+        width: 80%;
     }
 }
 
