--- a/src/main/resources/templates/adminBanner.html
+++ b/src/main/resources/templates/adminBanner.html
@@ -16,20 +16,20 @@
             <a class="prop" th:classappend="${active} ? 'active' : ''" href="/admin/banner">Editar Propaganda <span></span></a>
             <a class="mods" href="/admin/mods">Gerenciar Moderadores</a>
         </div>
-        <form role="form" th:action="@{/admin/banner}" th:method="post">
+        <form role="form" th:action="@{/admin/banner}" th:method="post" th:object="${banner}">
             <div class="form">
                 <h1 class="title">Atualize a propaganda</h1>
                 <div class="form-control">
                     <label for="title">Titulo do anuncio</label>
-                    <input type="text" name="title" id="title"/>
+                    <input type="text" name="title" id="title" th:value="*{title}"/>
                 </div>
                 <div class="form-control">
                     <label for="url">Link do anúncio</label>
-                    <input type="text" name="url" id="url"/>
+                    <input type="text" name="url" id="url" th:value="*{url}"/>
                 </div>
                 <div class="form-control">
                     <label for="description">Texto do anuncio</label>
-                    <textarea type="text" name="description" id="description"></textarea>
+                    <textarea type="text" name="description" id="description" th:text="*{description}"></textarea>
                 </div>
                 <div class="row white-background">
                     <button type="submit">Atualizar</button>
@@ -41,12 +41,12 @@
     <div class="question-card-divider"></div>
     <div class="col-6">
 
-        <div class="banner" th:if="${banner}">
+        <div class="banner" th:if="${banner != null && banner.getIsActive() == 1}">
             <p>Pré-visualização do banner de propaganda.</p>
             <div th:replace="fragments/banner.html :: banner"></div>
         </div>
 
-        <p class="title" th:if="${banner ==  null}">Nenhuma propaganda cadastrada.</p>
+        <p class="title" th:if="${banner ==  null || banner.getIsActive() != 1}">Nenhuma propaganda cadastrada.</p>
 
     </div>
 
